make jdk8 compatible